--- a/exercicio1/style.css
+++ b/exercicio1/style.css
@@ -8,6 +8,9 @@
   width: 100vw;
   background-color: lightgray;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 .item {
@@ -15,4 +18,7 @@
   background-color: white;
   height: 180px;
   width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
